# archivos-bulk-converter

./: README.md  pyproject.toml  tif_to_pdf.sh
archivos_bulk_converter/: bulk.py
convert/: __init__.py
services/: ocr.py  tif_to_pdf.py
